--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,56 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                             https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+         version="5.0">
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+    <display-name>Suitcase Web Application</display-name>
+
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <el-ignored>false</el-ignored>
+            <page-encoding>UTF-8</page-encoding>
+            <scripting-invalid>false</scripting-invalid>
+        </jsp-property-group>
+    </jsp-config>
+
+    <!-- СТАТИЧЕСКИЕ РЕСУРСЫ -->
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/static/*</url-pattern>
+    </servlet-mapping>
+
+    <!-- ФИЛЬТР КОДИРОВКИ -->
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>ru.dovlatov.suitcase.filter.EncodingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <!-- ФИЛЬТР АУТЕНТИФИКАЦИИ -->
+    <filter>
+        <filter-name>AuthFilter</filter-name>
+        <filter-class>ru.dovlatov.suitcase.filter.AuthFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthFilter</filter-name>
+        <url-pattern>/index.jsp</url-pattern>
+        <url-pattern>/cart.jsp</url-pattern>
+        <url-pattern>/products.jsp</url-pattern>
+        <url-pattern>/biography.jsp</url-pattern>
+        <url-pattern>/products</url-pattern>
+        <url-pattern>/cart</url-pattern>
+        <url-pattern>/orders</url-pattern>
+    </filter-mapping>
+
     <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
         <welcome-file>login.jsp</welcome-file>
     </welcome-file-list>
+
 </web-app>
-
-
